# contrastive-finetuning

./: .gitignore  README.md  app.py  pyproject.toml
configs/: README.md  contrastive_fixed_default_10.json  contrastive_fixed_stratified_25k.json  contrastive_fixed_stratified_50k.json  positive_fixed_default_10.json  positive_fixed_default_20.json  positive_fixed_stratified_10.json  positive_fixed_stratified_20.json  train_contrastive_positive_pairs.json
dashboard/: Load.py  Utils.py
dashboard/pages/: 1_Choose_Model.py  2_Classification_Report.py  3_Average_Similarity.py  4_Similarity_Matrix.py  5_Semantic_Map.py  6_Class_Metrics.py  7_Unmasked_Data.py
notebooks/: 00-initialise.ipynb  01-train.ipynb  02-generate_embeddings.ipynb  03-validation.ipynb  04-classification.ipynb  05-results.ipynb  06-consolidate-datasets.ipynb
scripts/: create_demo_data.py  create_demo_results.py  run_pipeline.py  take_screenshots.py
src/contrastive_experiment/: classify_utils.py  eval_utils.py  results_utils.py  train_utils.py  utils.py  workflows.py
tests/: test_data_generator.py  test_embedding_extractor.py  test_train_config.py  test_trainer.py
